--- a/TODO
+++ b/TODO
@@ -92,7 +92,7 @@
     есть хотя бы один староста)
   * Кнопка добавления заместителя открывает лайтбокс для приглашения старосты
   * Кнопка для доб замес доступна только старостам группы
-  * Показывать печальную панельку, если в группе нет старосты
+  * Показывать печальную ифно панельку, если в группе нет старосты
   * Показыавть инфо панельку после становления юзера старостой
     * Первая страничка о том, какая честь быть старостой на ST, какая это ответственность
     * Вторая страничка о том, что теперь можно делать (заполнять расписание, оповещать
@@ -102,6 +102,14 @@
   * Завязать редактор расписания с API
   * Сделать API для отправки оповещений по SMS всем участникам группы
   * Убрать режим "сессия" (временно)
+  * Стили для деталий о паре
+  * Доверстать приложения
+  * Стили для приложений
+  * Доделат загрузку файлов
+  * Каждый Item должен иметь два режима: редактор и отобр
+  * Привязать вывод приложений к коллекции Attachments. Вывод тольео N приложений
+  * Сделать кнопку "загрузить еще" для показа большего кол-ва приложений
+
 
 
 5. Вход/Регистрация/Аккаунт
