--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 1. Главная
-  * Проверить наличие нужных для поиска вузов API
-  * Привязать Suggestions (компонент) для поиска
+  DONE * Проверить наличие нужных для поиска вузов API <-
+  * Привязать Suggestions (компонент) для поиска <-
   * Добавить в Suggestions (модель) работу с University (модель)
   * Добавить модель University
   * Сделать индикацию загрузки
