added uni loading indicator

--- a/TODO
+++ b/TODO
@@ -1,10 +1,8 @@
 1. Главная
   DONE * Проверить наличие нужных для поиска вузов API <-
-  * Привязать Suggestions (компонент) для поиска <-
-  * Добавить в Suggestions (модель) работу с University (модель)
-  * Добавить модель University
-  * Сделать индикацию загрузки
-  * Сделать в Suggestions (компонент) возможность вывода N элементов без строки поиска
+  DONE * Добавить в Suggestions (модель) работу с University (модель)
+  DONE * Добавить модель University
+  DONE * Сделать индикацию загрузки
   * Выводить первые 30 вузов и строчку "и еще около 1000 вузов!".
     При нажатии на нее делать фокус на строку поиска.
   * Регистрировать поисковые запросы в GA
