added "find more!" row in index

--- a/TODO
+++ b/TODO
@@ -3,8 +3,8 @@
   DONE * Добавить в Suggestions (модель) работу с University (модель)
   DONE * Добавить модель University
   DONE * Сделать индикацию загрузки
-  * Выводить первые 30 вузов и строчку "и еще около 1000 вузов!".
-    При нажатии на нее делать фокус на строку поиска.
+  DONE * Выводить первые 30 вузов и строчку "и еще около 1000 вузов!".
+         При нажатии на нее делать фокус на строку поиска.
   * Регистрировать поисковые запросы в GA
   * Регистрировать нажатия на "Найди свой вуз" в GA
 
