added GA event tracking on unis page

--- a/TODO
+++ b/TODO
@@ -5,8 +5,8 @@
   DONE * Сделать индикацию загрузки
   DONE * Выводить первые 30 вузов и строчку "и еще около 1000 вузов!".
          При нажатии на нее делать фокус на строку поиска.
-  * Регистрировать поисковые запросы в GA
-  * Регистрировать нажатия на "Найди свой вуз" в GA
+  DONE * Регистрировать поисковые запросы в GA
+  DONE * Регистрировать нажатия на "Найди свой вуз" в GA
 
 
 2. Страничка ВУЗа
